--- a/infra/terraformCD.yaml
+++ b/infra/terraformCD.yaml
@@ -4,7 +4,8 @@ run-name: TerraformCD
 on:
   push:
     branches:
-      - main
+      - dev 
+      #- main
   pull_request:
     types: [ opened, synchronize, reopened, edited ]
   workflow_dispatch:
@@ -39,13 +40,13 @@ jobs:
         with:
           terraform_version: ${{ env.TF_VERSION }}
 
-      - name: Set Docker
-        run: |
-          sudo yum update -y
-          sudo yum install docker -y
-          sudo service docker start
-          sudo usermod -a -G docker ec2-user
-          newgrp docker
+      # - name: Set Docker
+      #   run: |
+      #     sudo yum update -y
+      #     sudo yum install docker -y
+      #     sudo service docker start
+      #     sudo usermod -a -G docker ec2-user
+      #     newgrp docker
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
