--- a/.github/workflows/terraformCD.yaml
+++ b/.github/workflows/terraformCD.yaml
@@ -40,13 +40,13 @@ jobs:
         with:
           terraform_version: ${{ env.TF_VERSION }}
 
-      # - name: Set Docker
-      #   run: |
-      #     sudo yum update -y
-      #     sudo yum install docker -y
-      #     sudo service docker start
-      #     sudo usermod -a -G docker ec2-user
-      #     newgrp docker
+      - name: Set Docker
+        run: |
+          sudo yum update -y
+          sudo yum install docker -y
+          sudo service docker start
+          sudo usermod -a -G docker ec2-user
+          newgrp docker
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
