--- a/.github/workflows/terraformCD.yaml
+++ b/.github/workflows/terraformCD.yaml
@@ -1,5 +1,5 @@
 name: Terraform GitOps Workflow
-run-name: TerraformCD
+run-name: cicd-technion
 
 on:
   push:
@@ -27,7 +27,7 @@ env:
 
 jobs:
   terraform-plan:
-    runs-on: terraformcd
+    runs-on: cicd-technion
     permissions:
       contents: read
       pull-requests: write
@@ -72,7 +72,7 @@ jobs:
 
   manual-approval:
     needs: terraform-plan
-    runs-on: terraformcd
+    runs-on: cicd-technion
     if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/dev'
     steps:
       - uses: trstringer/manual-approval@v1
@@ -85,7 +85,7 @@ jobs:
 
   terraform-apply:
     needs: manual-approval
-    runs-on: terraformcd
+    runs-on: cicd-technion
     if: github.event_name != 'workflow_dispatch' || github.ref == 'refs/heads/main'
     permissions:
       contents: read
